--- a/api/.env
+++ b/api/.env
@@ -1,5 +1,29 @@
 PORT=4000
+#DB
 HOST=http://0.0.0.0:
-APP_URL=http://0.0.0.0:4000
-APP_SECRET=b97117359fa9a99d3475b96697620475
-MONGO_URI=mongodb://0.0.0.0:27017/crisdb
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_USER=admin
+POSTGRES_PASSWORD=admin
+POSTGRES_DB=crisappdb
+PORT=5000
+
+# Application
+APP_SECRET=
+APP_API_URL=http://localhost:5000
+APP_WEB_URL=http://localhost:3000
+
+# Mail
+MAIL_DRIVER=ethereal
+
+# Storage
+STORAGE_DRIVER=disk
+
+# AWS Credentials
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+
+# Redis
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASS=
