--- a/api/.eslintrc.json
+++ b/api/.eslintrc.json
@@ -1,27 +1,46 @@
 {
-  "env": {
-    "es2021": true,
-    "node": true
-  },
-  "extends": ["airbnb-base"],
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaVersion": 12,
-    "sourceType": "module"
-  },
-  "plugins": ["@typescript-eslint"],
-  "rules": {
-    "import/extensions": "off",
-    "camelcase": "off",
-    "semi": "off",
-    "import/prefer-default-export": "off",
-    "linebreak-style": ["error", "unix"]
-  },
-  "settings": {
-    "import/resolver": {
-      "node": {
-        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+    "env": {
+        "browser": true,
+        "es6": true
+    },
+    "extends": [
+        "airbnb-base",
+        "plugin:@typescript-eslint/recommended",
+        "prettier/@typescript-eslint",
+        "plugin:prettier/recommended"
+    ],
+    "globals": {
+        "Atomics": "readonly",
+        "SharedArrayBuffer": "readonly"
+    },
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaVersion": 2018,
+        "sourceType": "module"
+    },
+    "plugins": [
+        "@typescript-eslint",
+        "prettier"
+    ],
+    "rules": {
+      "@typescript-eslint/no-unused-vars": "off",
+      "class-methods-use-this": "off",
+      "no-console": "off",
+      "camelcase":"off",
+      "import/extensions": [
+        "error",
+        "ignorePackages",
+        {
+          "ts": "never"
+        }
+      ],
+      "prettier/prettier": "error",
+      "import/prefer-default-export": "off"
+
+    },
+    "settings": {
+      "import/resolver": {
+      "typescript": {}
       }
-    }
   }
-}
+  }
