--- a/api/package.json
+++ b/api/package.json
@@ -1,44 +1,56 @@
 {
-  "name": "nodeapi",
+  "name": "cris_api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc -b",
-    "build:cp": "cp -R ./public/. dist/public",
-    "dev:server": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts"
+    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
+    "dev:server": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js -f ./src/ormconfig",
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.9",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
+    "class-transformer": "^0.3.1",
     "debug": "^4.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-favicon": "^2.0.1",
+    "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.12",
-    "serve-favicon": "^2.5.0"
+    "multer": "^1.4.2",
+    "pg": "^8.5.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.29",
+    "uuidv4": "^6.2.5"
   },
   "devDependencies": {
-    "@types/bcrypt": "^3.0.0",
+    "@babel/cli": "^7.10.3",
+    "@babel/core": "^7.10.3",
+    "@babel/node": "^7.10.3",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/plugin-proposal-decorators": "^7.10.3",
+    "@babel/preset-env": "^7.10.3",
+    "@babel/preset-typescript": "^7.10.1",
     "@types/bcryptjs": "^2.4.2",
-    "@types/cors": "^2.8.9",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/serve-favicon": "^2.5.2",
-    "@typescript-eslint/eslint-plugin": "^4.13.0",
-    "@typescript-eslint/parser": "^4.13.0",
-    "eslint": "^7.18.0",
+    "@types/multer": "^1.4.4",
+    "@types/node": "^14.14.31",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "babel-plugin-transform-typescript-metadata": "^0.3.0",
+    "eslint": "6.8.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-import-resolver-typescript": "^2.3.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^2.2.1",
+    "prettier": "^2.1.2",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.5"
   }
