feature/Postgres Changing docker-compose.yml

--- a/api/.env
+++ b/api/.env
@@ -1,7 +1,7 @@
 PORT=4000
 #DB
 HOST=http://0.0.0.0:
-POSTGRES_HOST=localhost
+POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=admin
