--- a/api/.env
+++ b/api/.env
@@ -1,12 +1,12 @@
-PORT=4000
 #DB
-HOST=http://0.0.0.0:
+PORT=4000
+HOST=52.14.227.42
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=admin
 POSTGRES_DB=crisappdb
-PORT=5000
+
 
 # Application
 APP_SECRET=
