--- a/api/package.json
+++ b/api/package.json
@@ -23,6 +23,7 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "node-fetch": "^2.6.1",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.29",
@@ -40,6 +41,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/multer": "^1.4.4",
     "@types/node": "^14.14.31",
+    "@types/node-fetch": "^2.5.8",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
     "babel-plugin-module-resolver": "^4.0.0",
