--- a/api/package.json
+++ b/api/package.json
@@ -27,6 +27,7 @@
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.29",
+    "uuid": "^8.3.2",
     "uuidv4": "^6.2.5"
   },
   "devDependencies": {
