--- a/api/ormconfig.json
+++ b/api/ormconfig.json
@@ -1,9 +1,9 @@
 {
   "type": "postgres",
-  "host": "52.14.227.42",
+  "host": "YOUR_DATABASE_HOST",
   "port": 5432,
-  "username": "admin",
-  "password": "admin",
+  "username": "YOUR_DATABASE_USER",
+  "password": "YOUR_DATABASE_PASSWORD",
   "database": "crisappdb",
   "entities": [
     "src/models/**/*.ts"
