--- a/api/ormconfig.json
+++ b/api/ormconfig.json
@@ -6,12 +6,12 @@
   "password": "admin",
   "database": "crisappdb",
   "entities": [
-    "src/models/**/*.ts"
+    "./src/models/**/*.ts"
   ],
   "migrations": [
-    "src/database/migrations/*.ts"
+    "./src/database/migrations/*.ts"
   ],
   "cli": {
-    "migrationsDir": "src/database/migrations"
+    "migrationsDir": "./src/database/migrations"
   }
 }
